corrected picture on index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="Contact.html">Contact</a>
         </nav>
         
-        <img src='silvertoned.jpg' alt="headshot of me" width='700' height='600'>
+        <img src='Images/silvertoned.jpg' alt="headshot of me" width='700' height='600'>
             <header>
                 <h2>Maggie Seibert</h2>
                 
