--- a/AboutMe.html
+++ b/AboutMe.html
@@ -22,7 +22,7 @@
             I also plan on obtaining a certificate in Game Art from DAAP. I graduated from a college prepatory school with a 3.8 and plan on obtaining a Master's degree."><h3>Education </h3> 
         </div>
         
-        <div id="techskills" data-text="I have experience coding with Java and C#. I am currently cultivating skills in HTML5 and CSS3, Adobe Photoshop, OpenShot Video Editor, Audacity, SQLT, and Linux Administration."> <h3>Technical Skills </h3>
+        <div id="techskills" data-text="I have experience coding with Java and C#. I am currently cultivating skills in HTML5 and CSS3, JavaScript, Adobe Photoshop, and Adobe After Effects"> <h3>Technical Skills </h3>
         </div>
         <div id="gamedev" data-text="I recently began working with Unity3D, which I plan to use to develop a large assortment of games.
         I am very passionate about gaming and game design. I believe gaming can bring people together"><h3>Game Development </h3></div> 
@@ -78,7 +78,7 @@
                     <dt>Video Editing</dt>
                 <dd>I spend some of my free time learning how to edit videos. I have used a range of editors including: Video Star, Cute Cut, OpenShot, and Adobe After Effects</dd>
                     <dt>Audacity</dt>
-                <dd> I use Audacity to edit songs I want to use in my projects. I have used the different effects Audacity has, and even made sound effects to go in my Roll-a-Ball Game</dd>
+                <dd> I use Audacity to edit songs I want to use in my projects. I have used the different effects Audacity has and created some of my own sounds</dd>
                     <dt>Gaming</dt>
                 <dd>I am a vivid gamer who is active in several online communities across different social media platforms. I can remember playing games all the way back to when I was about three years old! Some of my favorite games include: 
                 <a href="https://playoverwatch.com/en-us/">Overwatch</a>,
