--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
             <br/>
 
-                     <a href="mailto:seiberme@mail.uc.edu">seiberme@mail.uc.edu</a>
+                     <a href="mailto:latinslackin@gmail.com">Email Me</a>
 
         </footer>
         
