--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" id="main" href="style.css" type="text/css"/>
-        <link rel="icon" href="SiteLogo.png" type="image/ico">
+        <link rel="icon" href="Images/SiteLogo.PNG" type="image/ico">
        
     </head>
     <body>
